atlas-udd/jenkins/jenkins_dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: atlas-jenkins
   namespace: atlas-udd
   labels:
      name: atlas-jenkins
spec:
   replicas: 1
   template:
      metadata:
         labels:
            app: atlas-jenkins
      spec:
         containers:
            - name: jenkins-maste
              image: atlas_udd/jenkins_master:1.0
              ports:
                 - name: http-port
                   containerPort: 8080
                 - name: jnlp-port
                   containerPort: 50000
              volumeMounts:
                 - name: jenkins-home
                   mountPath: /var/jenkins_home
                 - name: maven-repo
                   mountPath: /tools/maven_repository
                 - name: docker-socket
                   mountPath: /var/run/docker.sock
                 - name: docker
                   mountPath: /usr/bin/docker
         volumes:
            - name: maven-repo
              hostPath:
                 path: /tools/maven_repository
                 type: Directory
            - name: jenkins-home
              emptyDir: {}
            - name: docker-socket
              hostPath:
                 path: /var/run/docker.sock
                 type: Socket
            - name: docker
              hostPath:
                 path: /usr/bin/docker
                 type: File
