atlas-udd/jenkins/jenkins_svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: atlas-jenkins
   namespace: atlas-udd
   labels:
      name: atlas-jenkins
spec:
   type: NodePort
   ports:
      - port: 18080
        targetPort: 8080
        name: http-port 
      - port: 50000
        targetPort: 50000
        name: jnlp-port
   selector:
      app: atlas-jenkins
